# cursor-switch

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  data-locations.md  safety.md  usage.md
src/cursor_switch/: __init__.py  __main__.py  auth.py  backup.py  cli.py  cli_config.py  config.py  cursor_proc.py  init_cmd.py  log.py  paths.py  repair_cmd.py  switch_cmd.py
