[project]
name = "cursor-switch"
version = "0.1.0"
description = "Switch Cursor IDE accounts while keeping shared chats, plans, and workspaces"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
cursor-switch = "cursor_switch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cursor_switch"]

[tool.uv]
package = true
